fix z-index on featured style links

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -85,6 +85,9 @@ a {
     a:visited:hover {
       color: #fffffe; }
 
+.features a {
+  z-index: auto; }
+
 a.skip-link {
   display: table;
   margin-left: auto;
