--- a/app/scss/partials/_links.scss
+++ b/app/scss/partials/_links.scss
@@ -37,6 +37,10 @@ a {
   }
 }
 
+.features a {
+  z-index: auto;
+}
+
 a.skip-link {
   display: table;
   margin: {
